--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
 	testImplementation ('org.springframework.boot:spring-boot-starter-test:2.5.4') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -22,6 +24,7 @@ dependencies {
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
 }
 
 test {
