--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'com.crud'
@@ -15,8 +16,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.4'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.4'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
-	testImplementation ('org.springframework.boot:spring-boot-starter-test:2.5.4') {
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+	testImplementation ('org.springframework.boot:spring-boot-starter-test:2.5.5') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	compileOnly 'org.projectlombok:lombok:1.18.20'
@@ -25,6 +26,7 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.5.5'
 }
 
 test {
