--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id 'war'
+	//id 'war'
 }
 
 group = 'com.crud'
@@ -26,7 +26,7 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.5.5'
+	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.5.5'
 }
 
 test {
