--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 #spring.datasource.username=kodilla
-#spring.datasource.password=MagdazanetaAmeliaMax20
+#spring.datasource.password=kodilla
 
 #spring.jpa.database=mysql
 #spring.jpa.show-sql=true
