--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
 	mavenCentral()
 }
 
+jar {
+	enabled = false
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.5'
@@ -25,7 +29,7 @@ dependencies {
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
-	//runtimeOnly 'org.postgresql:postgresql:42.2.24.jre7'
+	runtimeOnly 'org.postgresql:postgresql:42.2.24.jre7'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
 	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.5.5'
 
