--- a/build.gradle
+++ b/build.gradle
@@ -14,22 +14,27 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.5'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
-	testImplementation('org.springframework.boot:spring-boot-starter-test:2.5.5') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	implementation 'org.projectlombok:lombok:1.18.20'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
+//	runtimeOnly 'org.postgresql:postgresql'
+	testImplementation ('org.springframework.boot:spring-boot-starter-test:2.5.5'){
+		exclude group: 'org.junit.vintage', module: 'org.junit.vintage.engine'
 	}
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
-	runtimeOnly 'org.postgresql:postgresql:42.2.24.jre7'
-	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
-	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.5.5'
 
+//	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 }
+
 
 test {
 	useJUnitPlatform()
