--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ trello.app.username=anetabiaas1
 #spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=root
+spring.datasource.username=kodilla
 spring.datasource.password=MagdazanetaAmeliaMax20
 
 spring.jpa.database=mysql
