--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.5'
+	implementation 'org.springframework.boot:spring-boot-starter-mail:2.5.5'
 	implementation 'org.projectlombok:lombok:1.18.20'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
 //	runtimeOnly 'org.postgresql:postgresql'
