--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:2.5.5'
 	implementation 'org.projectlombok:lombok:1.18.20'
-	runtimeOnly 'mysql:mysql-connector-java:8.0.25'
-//	runtimeOnly 'org.postgresql:postgresql'
+	//runtimeOnly 'mysql:mysql-connector-java:8.0.25'
+	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation ('org.springframework.boot:spring-boot-starter-test:2.5.5'){
 		exclude group: 'org.junit.vintage', module: 'org.junit.vintage.engine'
 	}
